Added import support

--- a/wg_dashboard_frontend/package.json
+++ b/wg_dashboard_frontend/package.json
@@ -40,7 +40,9 @@
     "@angular/platform-browser": "9.1.0",
     "@angular/platform-browser-dynamic": "9.1.0",
     "@angular/router": "9.1.0",
+    "@jedmao/ini-parser": "^0.2.4",
     "angular-material-dynamic-themes": "^1.0.4",
+    "angular-notifier": "^6.0.1",
     "angularx-qrcode": "^2.1.0",
     "classlist.js": "1.1.20150312",
     "core-js": "3.6.4",
