--- a/wg_dashboard_frontend/package.json
+++ b/wg_dashboard_frontend/package.json
@@ -46,10 +46,16 @@
     "angularx-qrcode": "^2.1.0",
     "classlist.js": "1.1.20150312",
     "core-js": "3.6.4",
+    "file-saver": "^2.0.2",
     "hammerjs": "^2.0.8",
+    "install": "^0.13.0",
     "ip-cidr": "^2.0.10",
+    "js-file-download": "^0.4.11",
+    "jszip": "^3.3.0",
     "material-icons": "^0.3.1",
     "ngx-cookie-service": "^3.0.4",
+    "npm": "^6.14.4",
+    "remove": "^0.1.5",
     "rxjs": "6.5.5",
     "tslib": "^1.10.0",
     "web-animations-js": "^2.3.2",
