--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,15 @@
-dist: xenial
+dist: focal
+addons:
+  apt:
+    sources:
+      - sourceline: 'deb https://download.docker.com/linux/ubuntu $(lsb_release -cs) stable'
+    packages:
+      - docker
 sudo: required
 env:
   global:
     - DOCKER_REPO=perara/wg-manager
 before_install:
-  - curl -fsSL https://get.docker.com | sh
   - echo '{"experimental":"enabled"}' | sudo tee /etc/docker/daemon.json
   - mkdir -p $HOME/.docker
   - echo '{"experimental":"enabled"}' | sudo tee $HOME/.docker/config.json
