* Update to angular 10

--- a/wg_dashboard_frontend/package.json
+++ b/wg_dashboard_frontend/package.json
@@ -30,18 +30,18 @@
   },
   "homepage": "https://github.com/perara/wg-manager",
   "dependencies": {
-    "@angular/animations": "9.1.0",
+    "@angular/animations": "10.2.4",
     "@angular/cdk": "^9.2.0",
-    "@angular/common": "9.1.0",
-    "@angular/compiler": "9.1.0",
-    "@angular/core": "9.1.0",
+    "@angular/common": "10.2.4",
+    "@angular/compiler": "10.2.4",
+    "@angular/core": "10.2.4",
     "@angular/flex-layout": "^9.0.0-beta.29",
-    "@angular/forms": "9.1.0",
-    "@angular/localize": "9.1.0",
+    "@angular/forms": "10.2.4",
+    "@angular/localize": "10.2.4",
     "@angular/material": "^9.2.0",
-    "@angular/platform-browser": "9.1.0",
-    "@angular/platform-browser-dynamic": "9.1.0",
-    "@angular/router": "9.1.0",
+    "@angular/platform-browser": "10.2.4",
+    "@angular/platform-browser-dynamic": "10.2.4",
+    "@angular/router": "10.2.4",
     "@jedmao/ini-parser": "^0.2.4",
     "angular-material-dynamic-themes": "^1.0.4",
     "angular-notifier": "^6.0.1",
@@ -59,17 +59,17 @@
     "npm": "^6.14.4",
     "remove": "^0.1.5",
     "rxjs": "6.5.5",
-    "tslib": "^1.10.0",
+    "tslib": "^2.0.0",
     "web-animations-js": "^2.3.2",
     "widdershins": "^4.0.1",
     "zone.js": "^0.10.3"
   },
   "devDependencies": {
-    "@angular-devkit/schematics": "^9.1.1",
-    "@angular-devkit/build-angular": "~0.901.0",
-    "@angular/cli": "9.1.0",
-    "@angular/compiler-cli": "9.1.0",
-    "@angular/language-service": "9.1.0",
+    "@angular-devkit/schematics": "^10.2.1",
+    "@angular-devkit/build-angular": "~0.1002.1",
+    "@angular/cli": "10.2.1",
+    "@angular/compiler-cli": "10.2.4",
+    "@angular/language-service": "10.2.4",
     "@types/node": "^13.11.0",
     "codelyzer": "^5.1.2",
     "node-sass": "4.14.1",
@@ -79,9 +79,9 @@
     "stylelint-config-standard": "20.0.0",
     "stylelint-scss": "3.16.0",
     "ts-node": "8.8.2",
-    "tslint": "6.1.1",
+    "tslint": "~6.1.0",
     "tslint-angular": "3.0.2",
     "tslint-config-airbnb": "5.11.2",
-    "typescript": "3.8.3"
+    "typescript": "4.0.5"
   }
 }
