--- a/wg_dashboard_frontend/package.json
+++ b/wg_dashboard_frontend/package.json
@@ -30,49 +30,49 @@
   },
   "homepage": "https://github.com/perara/wg-manager",
   "dependencies": {
-    "@angular/animations": "10.2.4",
-    "@angular/cdk": "^9.2.0",
-    "@angular/common": "10.2.4",
-    "@angular/compiler": "10.2.4",
-    "@angular/core": "10.2.4",
-    "@angular/flex-layout": "^9.0.0-beta.29",
-    "@angular/forms": "10.2.4",
-    "@angular/localize": "10.2.4",
-    "@angular/material": "^9.2.0",
-    "@angular/platform-browser": "10.2.4",
-    "@angular/platform-browser-dynamic": "10.2.4",
-    "@angular/router": "10.2.4",
-    "@jedmao/ini-parser": "^0.2.4",
-    "angular-material-dynamic-themes": "^1.0.4",
-    "angular-notifier": "^6.0.1",
-    "angularx-qrcode": "^2.1.0",
+    "@angular/animations": "11.0.5",
+    "@angular/cdk": "11.0.3",
+    "@angular/common": "11.0.5",
+    "@angular/compiler": "11.0.5",
+    "@angular/core": "11.0.5",
+    "@angular/flex-layout": "11.0.0-beta.33",
+    "@angular/forms": "11.0.5",
+    "@angular/localize": "11.0.5",
+    "@angular/material": "11.0.3",
+    "@angular/platform-browser": "11.0.5",
+    "@angular/platform-browser-dynamic": "11.0.5",
+    "@angular/router": "11.0.5",
+    "@jedmao/ini-parser": "0.2.4",
+    "angular-material-dynamic-themes": "1.0.4",
+    "angular-notifier": "6.0.1",
+    "angularx-qrcode": "10.0.11",
     "classlist.js": "1.1.20150312",
     "core-js": "3.6.4",
-    "file-saver": "^2.0.2",
-    "hammerjs": "^2.0.8",
-    "install": "^0.13.0",
-    "ip-cidr": "^2.0.10",
-    "js-file-download": "^0.4.11",
-    "jszip": "^3.3.0",
-    "material-icons": "^0.3.1",
-    "ngx-cookie-service": "^3.0.4",
-    "npm": "^6.14.4",
-    "remove": "^0.1.5",
+    "file-saver": "2.0.5",
+    "hammerjs": "2.0.8",
+    "install": "0.13.0",
+    "ip-cidr": "2.1.1",
+    "js-file-download": "0.4.12",
+    "jszip": "3.5.0",
+    "material-icons": "0.5.1",
+    "ngx-cookie-service": "11.0.2",
+    "npm": "6.14.4",
+    "remove": "0.1.5",
     "rxjs": "6.5.5",
-    "tslib": "^2.0.0",
-    "web-animations-js": "^2.3.2",
-    "widdershins": "^4.0.1",
-    "zone.js": "^0.10.3"
+    "tslib": "2.0.3",
+    "web-animations-js": "2.3.2",
+    "widdershins": "4.0.1",
+    "zone.js": "0.10.3"
   },
   "devDependencies": {
-    "@angular-devkit/schematics": "^10.2.1",
-    "@angular-devkit/build-angular": "~0.1002.1",
-    "@angular/cli": "10.2.1",
-    "@angular/compiler-cli": "10.2.4",
-    "@angular/language-service": "10.2.4",
+    "@angular-devkit/schematics": "^11.0.5",
+    "@angular-devkit/build-angular": "~0.1100.5",
+    "@angular/cli": "11.0.5",
+    "@angular/compiler-cli": "11.0.5",
+    "@angular/language-service": "11.0.5",
     "@types/node": "^13.11.0",
-    "codelyzer": "^5.1.2",
-    "node-sass": "4.14.1",
+    "codelyzer": "^6.0.0",
+    "sass": "1.32.0",
     "pre-commit": "1.2.2",
     "stylelint": "13.3.0",
     "stylelint-config-recommended-scss": "4.2.0",
