--- a/.github/workflows/image.yml
+++ b/.github/workflows/image.yml
@@ -22,4 +22,4 @@ jobs:
         run: |
           docker buildx build --push \
             --tag perara/wg-manager:latest \
-            --platform linux/amd64,linux/arm64/v8,linux/arm64,linux/arm/v7,linux/arm/v6 .
+            --platform linux/amd64,linux/arm64/v8,linux/arm64,linux/arm/v7 .
