--- a/.github/workflows/image.yml
+++ b/.github/workflows/image.yml
@@ -3,7 +3,7 @@ name: build and publish
 on:
   push:
     branches:
-      - 'main'
+      - 'dev'
 
 jobs:
   docker:
@@ -31,7 +31,7 @@ jobs:
           context: .
           platforms: linux/amd64,linux/arm64
           push: true
-          tags: user/app:latest
+          tags: perara/wg-manager:dev
 
 
 
