--- a/.github/workflows/image.yml
+++ b/.github/workflows/image.yml
@@ -3,12 +3,16 @@ name: build and publish
 on:
   push:
     branches:
-      - 'dev'
+      - '**'
 
 jobs:
   docker:
     runs-on: ubuntu-latest
     steps:
+      -
+        name: Branch-Name
+        uses: nelonoel/branch-name@v1
+
       -
         name: Checkout
         uses: actions/checkout@v2
@@ -24,7 +28,18 @@ jobs:
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
-      -
+
+      if: github.ref == 'refs/heads/main'
+        -
+          name: Build and push
+          uses: docker/build-push-action@v2
+          with:
+            context: .
+            platforms: linux/amd64,linux/arm64
+            push: true
+            tags: perara/wg-manager:latest
+      if: github.ref == 'refs/heads/dev'
+        -
         name: Build and push
         uses: docker/build-push-action@v2
         with:
@@ -32,6 +47,7 @@ jobs:
           platforms: linux/amd64,linux/arm64
           push: true
           tags: perara/wg-manager:dev
+
 
 
 
