--- a/.github/workflows/image.yml
+++ b/.github/workflows/image.yml
@@ -26,24 +26,24 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      if: github.ref == 'refs/heads/main'
-        -
-          name: Build and push
-          uses: docker/build-push-action@v2
-          with:
-            context: .
-            platforms: linux/amd64,linux/arm64
-            push: true
-            tags: perara/wg-manager:latest
-      if: github.ref == 'refs/heads/dev'
-        -
-        name: Build and push
+      -
+        name: Build and push main
+        uses: docker/build-push-action@v2
+        with:
+          context: .
+          platforms: linux/amd64,linux/arm64
+          push: true
+          tags: perara/wg-manager:latest
+        if: github.ref == 'refs/heads/main'
+      -
+        name: Build and push dev
         uses: docker/build-push-action@v2
         with:
           context: .
           platforms: linux/amd64,linux/arm64
           push: true
           tags: perara/wg-manager:dev
+        if: github.ref == 'refs/heads/dev'
 
 
 
